# ChangeLog for app-admin/system-config-printer-gnome
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/system-config-printer-gnome/ChangeLog,v 1.31 2011/08/24 21:24:06 reavertm Exp $

  24 Aug 2011; Maciej Mrozowski <reavertm@gentoo.org>
  system-config-printer-gnome-1.3.3.ebuild,
  system-config-printer-gnome-1.3.6.ebuild:
  Requires pkgconfig, bug 379689

*system-config-printer-gnome-1.3.6 (22 Aug 2011)

  22 Aug 2011; Maciej Mrozowski <reavertm@gentoo.org>
  -files/0001-Avoid-global-name-dbus-is-not-defined-traceback-in-s.patch,
  -files/0003-Properties-dialog-make-OK-button-sensitive-even-when.patch,
  -system-config-printer-gnome-1.3.5.ebuild,
  +system-config-printer-gnome-1.3.6.ebuild:
  Version bump, remove old

  10 Aug 2011; Markus Meier <maekke@gentoo.org>
  system-config-printer-gnome-1.3.3.ebuild:
  arm stable, bug #349496

*system-config-printer-gnome-1.3.5 (09 Aug 2011)

  09 Aug 2011; Maciej Mrozowski <reavertm@gentoo.org>
  +files/0001-Avoid-global-name-dbus-is-not-defined-traceback-in-s.patch,
  +files/0003-Properties-dialog-make-OK-button-sensitive-even-when.patch,
  -system-config-printer-gnome-1.2.2.ebuild,
  -files/system-config-printer-gnome-1.2.2-cupspk-fileget-tmp.patch,
  -files/system-config-printer-gnome-1.2.2-split.patch,
  +system-config-printer-gnome-1.3.5.ebuild,
  +files/system-config-printer-gnome-1.3.5-split.patch:
  Version bump, remove old

  24 Jul 2011; Markos Chandras <hwoarang@gentoo.org>
  system-config-printer-gnome-1.3.3.ebuild:
  Stable on amd64 wrt bug #349496

  19 Jul 2011; Markus Meier <maekke@gentoo.org>
  system-config-printer-gnome-1.3.3.ebuild:
  x86 stable, bug #349496

  18 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  system-config-printer-gnome-1.3.3.ebuild:
  ppc/ppc64 stable wrt #349496

*system-config-printer-gnome-1.3.3 (13 Jun 2011)

  13 Jun 2011; Maciej Mrozowski <reavertm@gentoo.org>
  -system-config-printer-gnome-1.2.6.ebuild,