@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/system-config-printer-gnome
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/system-config-printer-gnome/ChangeLog,v 1.31 2011/08/24 21:24:06 reavertm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/system-config-printer-gnome/ChangeLog,v 1.32 2011/10/05 22:55:07 reavertm Exp $
+
+*system-config-printer-gnome-1.3.7 (05 Oct 2011)
+
+  05 Oct 2011; Maciej Mrozowski <reavertm@gentoo.org>
+  +system-config-printer-gnome-1.3.7.ebuild:
+  Version bump
 
   24 Aug 2011; Maciej Mrozowski <reavertm@gentoo.org>
   system-config-printer-gnome-1.3.3.ebuild,
